# contractrec

./: .class_implementation_cf_recommender.txt  .class_implementation_clause_classifier.txt  .class_implementation_clause_generator.txt  .class_implementation_contract_bert.txt  .class_implementation_doc_sim_recommender.txt  .class_implementation_ledgar_dataset.txt  .consolidated_classes_functions.txt  .general_plan.txt  .index.txt  .instruction_archive  .instructions.txt  README.md  contractrec.txt  crec.txt  hello.py  instructions.txt  pyproject.toml  requirements.txt  setup_project.py
src/: __init__.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  classifier.py  clause_classifier.py  clause_generator.py  contract_bert.py  generator.py
src/recommenders/: __init__.py  cf_recommender.py  collaborative.py  doc_sim_recommender.py  similarity.py
src/utils/: __init__.py  evaluation.py  metrics.py  preprocessing.py
tests/: test_clauserec.py
tests/data/: test_dataset.py
